--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,16 @@ body {
 }
 
 .frame1 {
-    background: url(../img/back.jpg), linear-gradient(360deg, #000000 1.74%, rgba(0, 0, 0, 0) 45.74%), no-repeat;
+    background: url(../img/back.jpg), no-repeat;
     width: 100%;
     height: 1080px;
     position: relative;
     z-index: 1;
+}
+
+.gradient {
+    height: 100%;
+    background:  linear-gradient(360deg, #000000 1.74%, rgba(0, 0, 0, 0) 45.74%), no-repeat;
 }
 
 .container {
@@ -38,7 +43,7 @@ body {
     display: none;
 }
 .group_1 {
-    width: 270px;
+    width: 45px;
     padding: 0 5px;
 }
 
